--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
 	"name": "tour-card",
-	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"version": "1.0.0",
+	"description": "Tour Card Block",
+	"author": "Hemanth Sharma",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
+	"files": [
+		"*.php",
+		"assets",
+		"build"
+	],
 	"scripts": {
 		"build": "wp-scripts build",
 		"format": "wp-scripts format",
@@ -12,7 +17,8 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"start": "wp-scripts start",
+		"publish": "npm run build && npm run plugin-zip"
 	},
 	"devDependencies": {
 		"@wordpress/icons": "^9.36.0",
